horizontal scroll corrected

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <span class="burger__line"></span>
           </button>
           <div class="logo-mobile">
-            <img src="img/icons/logo.svg" alt="" class="logo__img">
+            <img src="img/icons/logo.svg" alt="" class="logo__img-mobile">
           </div>
         </div>
       </div>
