top button added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/media.css" />     
 </head>
 <body>
-  <header class="header">
+  <header class="header" id="header">
     <div class="container">
       
       <nav class="header__container">
@@ -563,6 +563,9 @@
     
   </main>
   <footer class="footer">
+    <a href="#header" class="footer__top-link">
+      <img src="img/icons/top__button.svg" alt="" class="footer__top-img">
+    </a>
     <div class="container">
       <div class="footer__upper">
         <nav class="footer__container">
